--- a/main.css
+++ b/main.css
@@ -1,12 +1,29 @@
-
+html {
+	font-family: Arial;
+}
 
 ul {
 	list-style: none;
 }
 
 li {
+
+}
+
+.container {
+	background: lightblue;
+	border: 6px solid black;
+	border-radius: 5px;
+	margin: 4rem;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	padding: 2rem;
+}
+
+img {
 	max-width: 20rem;
-	max-height: auto;
+	height: auto;
 	min-width: 10rem;
-	min-height: auto;
+	height: auto;
 }
