--- a/responsive-grid.css
+++ b/responsive-grid.css
@@ -42,8 +42,7 @@
    *
    */
   /*padding-left: 1.04166666%;
-  padding-right: 1.04166666%;
-  */
+  padding-right: 1.04166666%;*/
 }
 
 /* Mobile defaults */
